create asset types and fetch data
